django_project/sass/project.scss
@charset "UTF-8";
@import "base";
@import "settings";
@import "utils";


#map {
    position: fixed;
    top: $navbar-height;
    left: $navbar-width;
    bottom: 0;
    right: 0;
    margin: 0;
    padding: 0;
}

// style top-bar
.top-bar {
    background-color: $topbar-bg-color;
}

#refresh-notification {
    padding-right: rem-calc(8);
    padding-top: rem-calc(3);

    .spinner {
        color: $white-smoke;
    }
}

.ol-attribution img {
    width: rem-calc(88);
    height: rem-calc(23);
}

.hide {
  display: none !important;
}

.project-logo {
    margin-top: 1px;
    height: rem-calc(43);
}

.sl-accordion {
    @include accordion-container();
    .accordion-navigation {
        @include accordion-navigation($padding: rem-calc(5));
        .content {
            @include accordion-content($padding: rem-calc(0));
            // height: rem-calc(600);
            overflow: auto;
        }
    }

}

.sl-sidebar {
    padding: 0;
    margin: 0;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 9999;

    .content-holder {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;
      border: solid 1px #0097c6;
      -webkit-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
      -moz-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
      box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);


      .content {
        position: absolute;
        top: 0;
        left: 0;
        height: 100%;
        width: 100%;
        display: none;
        overflow: auto;
      }

      .show {
        display: block;
      }

    }

    .content-side {
        position: absolute;
        top: 60px;
        right: -30px;
        height: 100%;
        width: 30px;
        z-index: 99;


        .item {
            text-align: center;
            position: relative;
            float: left;
            clear: left;
            width: 20px;
            text-transform: uppercase;
            word-break: break-all !important;
            font-size: 12px;
            background-color: #0097c6;
            margin-top: 10px;
            padding: 10px 5px;
            letter-spacing: 3px;
            line-height: 16px;
            border: solid 1px #0097c6;
            // TODO: use compass for this
            -webkit-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
            -moz-box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
            box-shadow: 5px 5px 10px -2px rgba(0,0,0,0.75);
            // onmouse hover set cursor to pointer
            cursor: pointer;
        }

        .show {
          background-color: #FFFFFF;
          border-top: solid 1px #0097c6;
          border-right: solid 1px #0097c6;
          border-bottom: solid 1px #0097c6;
          border-left: solid 1px #FFFFFF;
          margin-left: -1px;
          width: 22px;

          a {
            color: #000000 !important;
          }
        }

        a {
          font-weight: bold;
          color: #FFFFFF;
        }
    }
}

.sl-panel {
    @include panel();

    position: fixed;
    z-index: 2;
    padding:0 !important;
    border: none !important;
    max-height: rem-calc(625);
    -webkit-box-shadow: -5px 5px 10px -2px rgba(0,0,0,0.75);
    -moz-box-shadow: -5px 5px 10px -2px rgba(0,0,0,0.75);
    box-shadow: -5px 5px 10px -2px rgba(0,0,0,0.75);

    .heading {
        // this class is defined in _utils partial
        @extend .relative-clear-left-100;

        background-color: $oil;
        font-size: rem-calc(12);
        color: $white;
        padding: rem-calc(3) rem-calc(10);
        text-transform: uppercase;

        .close-icon {
            position: absolute;
            top: 5px;
            right: 5px;
        }

        .close-icon:hover {
            color: #0097c6;
        }
    }

    .content {
        @extend .relative-clear-left-100;

        padding: rem-calc(3);
        border: solid rem-calc(1) $oil;
        overflow: auto;
        max-height: rem-calc(600);
    }

    li {
      font-size: rem-calc(12);
    }
}

#sidebar {
    position: fixed;
    width: $navbar-width - rem-calc(5);
    top: $navbar-height + rem-calc(5);
    left: rem-calc(5);
    bottom: rem-calc(5);
    margin: 0;
    padding: 0;

    ul {
        margin-left: 0;
    }

    input[type=checkbox] {
      margin:0;
    }

}

.layer-list {
    padding: rem-calc(2);
    margin: 0;
    width: 100%;
    display: inline-block;

    .layer-details {
        display: inline-block;
        margin-top: rem-calc(5);
        padding: 0 0 0 rem-calc(10);
    }

    .layer-name {
        margin-left: rem-calc(10);
        display: inline-block;
        line-height: rem-calc(18);
        text-transform: uppercase;
    }

    .layer-settings-control {
        position: relative;
        float: right;
        clear: right;
    }


    .layer {
        font-size: rem-calc(11);
        color: $black;
        padding: rem-calc(4) rem-calc(5) rem-calc(2) 0;

        &:hover {
            background-color: $smoke;
        }
    }

    .group {
        font-size: rem-calc(12);
        font-weight: bold;
        color: $black;
        padding: rem-calc(4) rem-calc(5) rem-calc(2) 0;

        &:hover {
            background-color: $smoke;
        }

        .layer {
            font-size: rem-calc(11);
            font-weight: normal;
            color: $black;
            padding: rem-calc(4) rem-calc(5) rem-calc(2) rem-calc(10);
        }

        .group {
          font-size: rem-calc(12);
          font-weight: bold;
          color: $black;
          padding: rem-calc(4) rem-calc(5) rem-calc(2) rem-calc(10);

          &:hover {
            background-color: $smoke;
          }

          .layer {
            font-size: rem-calc(11);
            font-weight: normal;
            color: $black;
            padding: rem-calc(4) rem-calc(5) rem-calc(2) rem-calc(20);
          }
        }
    }

    .group-name {
            margin-left: rem-calc(10);
            display: inline-block;
            line-height: rem-calc(18);
            text-transform: uppercase;
    }

    .layer-control {
        display: inline-block;
        font-size: rem-calc(16);
        color: $black;
        cursor: pointer;
        line-height: rem-calc(18);
        margin-left: rem-calc(5);

        i:hover {
            color: scale-color($alert-color, $lightness: 50%) !important;
        }
    }

    .group-control {
        position: relative;
        float: right;
        clear: right;

        cursor: pointer;
        display: inline-block;
        font-size: rem-calc(16);
        color: $black;
        line-height: rem-calc(18);
        margin-left: rem-calc(5);

        i:hover {
            color: scale-color($alert-color, $lightness: 50%) !important;
        }
    }
}

.deactivated {
    color: scale-color($black, $lightness: 85%) !important;
}


#panelSearch {
    margin: rem-calc(10);
    padding: 0;
}

#panelSearch .columns {
    padding: 0 !important;
}


#panelTools .controlHolder {
    width: rem-calc(100);
    position: relative;
    float: left;
}

#panelTools .button {
    margin: 0;
    padding: rem-calc(5) rem-calc(10);
}

#panelTools .button i {
    font-size: rem-calc(24);
}

.controlButton {
    width: rem-calc(65);
}

.toolbox-control-results {
    width: rem-calc(200);
    position: fixed;
    z-index: 2;
    padding:0 !important;
    border: none !important;
}

.GFITool {
    top: rem-calc(56);
    left: rem-calc(350);
}

.DistanceTool {
    top: rem-calc(56);
    right: rem-calc(15);
}

.toolbox-control-results {
    .item {
        display: block;
        font-size: rem-calc(12);
    }
    .content {
        overflow: auto;
        height: rem-calc(400);
    }
}


.toggle-icon {
    position: absolute;
    top: 0;
    right: rem-calc(5);
}

.locate-icon {
    position: absolute;
    top: 0;
    right: rem-calc(19);
}

.feature-result {
    display: block;
    position: relative;
    margin-bottom: rem-calc(5);
    font-size: rem-calc(12);
    border-bottom: 1px dotted;
}

.feature-result:hover {
    background-color: $smoke;
}

.mouse-pointer {
    cursor: pointer;
}

.head {
    background-color: #dfdfdf;
}

.head:hover {
    background-color: #c5c5c5;
}


.tooltip {
    position: relative;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 4px;
    color: white;
    padding: 4px 8px;
    opacity: 0.7;
    white-space: nowrap;
}
.tooltip-measure {
    opacity: 1;
    font-weight: bold;
}
.tooltip-static {
    background-color: #ffcc33;
    color: black;
    border: 1px solid white;
}
.tooltip-measure:before, .tooltip-static:before {
    border-top: 6px solid rgba(0, 0, 0, 0.5);
    border-right: 6px solid transparent;
    border-left: 6px solid transparent;
    content: "";
    position: absolute;
    bottom: -6px;
    margin-left: -7px;
    left: 50%;
}
.tooltip-static:before {
    border-top-color: #ffcc33;
}

ul.ss-result {
    list-style-type: none;
    margin: rem-calc(2);
    padding: 0;

    li {
      cursor: pointer;
      margin-bottom: rem-calc(5);
    }

    li:hover {
       background-color: $smoke;
    }
}

#toolbox {
    position: absolute;
    top: rem-calc(56);
    left: rem-calc(390);
}

.sl-toolbox {
  -webkit-box-shadow: 5px 5px 5px -2px rgba(0,0,0,0.55);
  -moz-box-shadow: 5px 5px 5px -2px rgba(0,0,0,0.55);
  box-shadow: 5px 5px 5px -2px rgba(0,0,0,0.55);
  .button {
      margin: 0;
  }
}

.search-chk {
  padding: rem-calc(3) rem-calc(10);
  text-transform: uppercase;
  font-size: rem-calc(12);
}

